- Navigational Functionality available. - Created Bug Detail view and template

--- a/bug/templates/bug/bug_create.html
+++ b/bug/templates/bug/bug_create.html
@@ -9,4 +9,6 @@
     {{ form.as_p }}
     <input type="submit"></button>
 </form>
+
+<p><a href="{% url 'bug:index'%}">Back</a></p>
 {% endblock content%}
