--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
+  <p><a href="{% url 'bug:index' %}">Bug List</a></p>
+
   <p><a href="{% url 'logout' %}">logout</a></p>
   <p><a href="{% url 'password_reset' %}">reset password</a></p>
 {% else %}
