ui login, signup and home

--- a/bug/templates/bug/index.html
+++ b/bug/templates/bug/index.html
@@ -8,17 +8,22 @@
 <link href="{% static '/bug/styles/main.css' %}" rel="stylesheet">
 <div class="container-fluid padding">
   <div class="row padding">
-    <div class="col-md-2"></div>
-    <div class="col-md-8">
-    <h3>List of Bugs</h3>
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+    {% if latest_bug_list %}
+    <div>
+      <h3 style="float:left">List of Bugs</h3>
+      <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
+            <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
+    </div>
     <!-- {% if latest_bug_list %}
         <ul>
         {% for bug in latest_bug_list %}
             <li><a href="{% url 'bug:bug-detail' id=bug.id %}">{{ bug.bug_title }}</a> - reported by {{bug.reported_by}}</li>
         {% endfor %}
         </ul> -->
-        <table class="bug-table table-striped">
-          <thead>
+        <table class="bug-table table-striped table-responsive table-hover">
+          <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
               <th scope="col">Title</th>
@@ -30,9 +35,10 @@
           </thead>
           <tbody>
             {% for bug in latest_bug_list %}
-            <tr>
+              <tr class="table-row" data-href="{% url 'bug:bug-detail' id=bug.id %}">
+              {% comment %} <th scope="row"><a href="#" class="stretched-link">1</a></th> {% endcomment %}
               <th scope="row">{{forloop.counter}}</th>
-              <td><a href="{% url 'bug:bug-detail' id=bug.id %}">{{ bug.bug_title }}</a></td>
+              <td>{{ bug.bug_title }}</td>
               <td>{{ bug.bug_description }}</td>
               <td>{{ bug.bug_states }}</td>
               <td>{{bug.reported_by}}</td>
@@ -41,19 +47,21 @@
             {% endfor %}
           </tbody>
         </table>
-        <!-- <button type="button" class="btn btn-dark">Dark</button> -->
-        <br>
-        <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button">Report Bug</a>
-        <!-- <p><a href="{% url 'bug:bug-form' %}">Report Bug</a></p> -->
-        <br>
-        <br>
-        <a href="{% url 'home' %}" class="btn btn-info" role="button">Back to Home</a>
-        <!-- <p><a href="{% url 'home' %}">Back to Home</a></p> -->
+        {% endif %}
     {% else %}
         <p>No bugs</p>
     {% endif %}
     </div>
-    <div class="col-md-2"></div>
+    <div class="col-md-3"></div>
   </div>
 </div>
+<script>
+$(document).ready(function($) {
+    $(".table-row").click(function() {
+        window.document.location = $(this).data("href");
+    });
+});
+</script>
+
+
 {% endblock %}
