--- a/bug/templates/bug/bug_details.html
+++ b/bug/templates/bug/bug_details.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
 <h1>{{title}}</h1>
 <p>{{desc}}</p>
 <p>{{date}}</p>
@@ -8,5 +9,5 @@
 
 <p><a href="{% url 'bug:index' %}">Back to List</a></p>
 
-
+</div>
 {% endblock %}
