--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,10 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
+section{
+  position: relative;
+  background: $color1;
+  text-align: center;
+}
 html,body{
   height: 100%;
   width:100%;
   font-family: 'Poppins', sans-serif;
   color: #222
+}
+.bug-index{
+  background-color: $color2;
+}
+.btn{
+  margin-bottom:1rem;
+}
+.login-jumbo{
+  padding-top: 0;
 }
 .navbar{
   padding: .8rem;
@@ -19,6 +33,10 @@ html,body{
   height: 20px;
   width:20px;
 }
+
+
+
+
 
 .social a{
   font-size: 2.5em;
@@ -42,8 +60,12 @@ html,body{
 .padding{
   padding-bottom: 2rem;
 }
+h2{
+  padding-top:2rem
+}
 .social-container{
   background-color: #d5d5d5;
+
 }
 
 .fa-facebook:hover,
