--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,16 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link href="{% static 'custom.css' %}" rel="stylesheet">
+	<link href="{% static 'styles/main.css' %}" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="{% static 'styles/main.css' %}" rel="stylesheet">
+
 </head>
 <body>
   <!-- Navigation -->
@@ -24,12 +28,26 @@
 		</button>
 		<div class="collapse navbar-collapse" id ="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+				{% if user.is_authenticated %}
+				<li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Profile
+			</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+				<a class="dropdown-item" href="#">My Profile</a>
+				<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+				<a class="dropdown-item" href="{% url  'password_reset' %}">Reset Password</a>
+				</div>
+				{% endif %}
+				</li>
+				<li class="nav-item"><a href="{% url 'home' %}" class="nav-link">Home</a></li>
 				<li class="nav-item"><a href="#" class="nav-link">About</a></li>
 				<li class="nav-item"><a href="#" class="nav-link">Service</a></li>
 				<li class="nav-item"><a href="#" class="nav-link">Team</a></li>
 				<li class="nav-item"><a href="#" class="nav-link">Connect</a></li>
+
 			</ul>
+
 		</div>
 	</div>
 </nav>
