--- a/templates/home.html
+++ b/templates/home.html
@@ -3,14 +3,26 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-{% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href="{% url 'bug:index' %}">Bug List</a></p>
 
-  <p><a href="{% url 'logout' %}">logout</a></p>
-  <p><a href="{% url 'password_reset' %}">reset password</a></p>
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h1 class="jumbotron-heading">We track bugs for you so you don't have to</h1>
+      <p class="lead text-muted">Managing bugs has been overlooked for the longest time. Tired of it? Me too.</p>
+
+    </div>
+{% if user.is_authenticated %}
+  <h3>Hi {{ user.username }}!</h3>
+  <div class="col-sm text-center bug-index">
+  <p class="lead text-muted">Time to take a look at those bugs</p>
+  <p><a href="{% url 'bug:index' %}" class="btn btn-primary">Bug List</a></p>
+</div>
+  {% comment %} <p><a href="{% url 'logout' %}" class="btn btn-danger">logout</a></p> {% endcomment %}
+  {% comment %} <p><a href="{% url 'password_reset' %}" class="btn btn-warning">reset password</a></p> {% endcomment %}
 {% else %}
   <p>You are not logged in</p>
-  <a href="{% url 'login' %}">login</a>
+  <a href="{% url 'login' %}" class="btn btn-primary">login</a>
+  <p> Don't have an account?<a href="{% url 'signup' %}"> Create an account</a><p/>
 {% endif %}
+</section>
+
 {% endblock %}
