--- a/bug/templates/bug/bug_create.html
+++ b/bug/templates/bug/bug_create.html
@@ -3,12 +3,28 @@
 {% block title %}Report Bug{% endblock %}
 
 {% block content %}
-<h2>Report Bug</h2>
-<form method= "post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit"></button>
-</form>
 
-<p><a href="{% url 'bug:index'%}">Back</a></p>
+<div class="col-sm-4">
+</div>
+<div class="container-fluid col-sm-4">
+  <h2>Report Bug</h2>
+  <form method= "post">
+      {% csrf_token %}
+      {% if form.non_field_errors %}<div class="alert alert-danger">{{ form.non_field_errors }}</div> {% endif %}
+      {% load widget_tweaks %}
+      {% for field in form %}
+      <div class="form-group {% if field.errors %}alert alert-danger{% endif %}">
+        {{ field.errors }}
+        {{ field.label_tag }}
+        {% render_field field class="form-control" %}
+        {% if field.help_text %}<small class="text-muted">{{ field.help_text|safe}}</small> {% endif %}
+      </div>
+      {% endfor %}
+      <input type="submit" class="btn btn-primary"></button>
+  </form>
+
+  <p><a href="{% url 'bug:index'%}" class="btn btn-danger">Back</a></p>
+</div>
+<div class="col-sm-4">
+</div>
 {% endblock content%}
