--- a/bug/templates/bug/bug_create.html
+++ b/bug/templates/bug/bug_create.html
@@ -8,7 +8,7 @@
 </div>
 <div class="container-fluid col-sm-4">
   <h2>Report Bug</h2>
-  <form method= "post">
+  {% comment %} <form method= "post" enctype="multipart/form-data">
       {% csrf_token %}
       {% if form.non_field_errors %}<div class="alert alert-danger">{{ form.non_field_errors }}</div> {% endif %}
       {% load widget_tweaks %}
@@ -21,7 +21,26 @@
       </div>
       {% endfor %}
       <input type="submit" class="btn btn-primary"></button>
-  </form>
+  </form> {% endcomment %}
+  <form id="post_form" method="post" action="" enctype="multipart/form-data">
+
+    {% csrf_token %}
+    {% for hidden in bugForm.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
+
+    {% for field in bugForm %}
+        {{ field }} <br/>
+    {% endfor %}
+
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{ form }}
+    {% endfor %}
+{% comment %} https://docs.djangoproject.com/en/3.0/topics/forms/formsets/ {% endcomment %}
+
+    <button type="submit" name="submit" class="btn btn-primary">Submit</button>
+</form>
 
   <p><a href="{% url 'bug:index'%}" class="btn btn-danger">Back</a></p>
 </div>
