--- a/bug/templates/bug/index.html
+++ b/bug/templates/bug/index.html
@@ -14,7 +14,7 @@
           <div>
             <h3 style="float:left">List of Bugs</h3>
             <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
-                  <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
+            <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
           </div>
           <table class="bug-table table-striped table-responsive table-hover">
           <thead class="thead-dark">
@@ -43,7 +43,14 @@
           </tbody>
         </table>
       {% else %}
+      <div>
+        <h3 style="float:left">List of Bugs</h3>
+        <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
+        <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
+      </div>
+      <div>
           <p>No bugs</p>
+      </div>
       {% endif %}
 
     </div>
