--- a/bug/templates/bug/bug_create.html
+++ b/bug/templates/bug/bug_create.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="card">
         <div class="card-header">
-            Add Bug
+            Report on a Bug
         </div>
         <div class="card-body">
           <form method="post" enctype="multipart/form-data">
