--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 	<link type = "text/css" href="{% static '/styles/main.css' %}" rel="stylesheet">
 	<link type = "text/css" href="{% static '/custom.css' %}" rel="stylesheet">
 
-	<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}?ver=2"/>
+	<link rel="shortcut icon" type="image/png" href="{% static 'img/bug.png' %}?ver=2"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
