--- a/bug/templates/bug/bug_details.html
+++ b/bug/templates/bug/bug_details.html
@@ -1,22 +1,56 @@
 {% extends "base.html" %}
-
+{% load static %}
+<link href="{% static '/bug/styles/main.css' %}" rel="stylesheet">
 
 {% block title %}Bug Detail{% endblock %}
 
 {% block content %}
 
-<div class="col-sm-4">
+<div class="col-sm-3">
 </div>
-<div class="container-fluid col-sm-4">
-  <h2>Bug detail</h2>
-  <p>{{ bug.bug_title}}</p>
-  <p>{{bug.bug_description}}</p>
+<div class="container-fluid col-sm-6">
 
-    <p><a href="{% url 'bug:bug-update' pk=bug.id %}" class="btn btn-primary">Update</a></p>
-  <p><a href="{% url 'bug:index'%}" class="btn btn-warning">Back</a></p>
-  <p><a href="{% url 'bug:bug-delete' pk=bug.id %}" class="btn btn-danger">Delete</a></p>
-
+  <h3 class="my-4">Bug Title:
+    <small>{{ bug.bug_title}}</small>
+  </h3>
+  <div class="row">
+    <div id="carouselExampleControls" class="carousel slide col-md-6" data-ride="carousel">
+      <div class="carousel-inner">
+        {% for image in bug.has_image.all %}
+        {% if forloop.first %}
+        <div class="carousel-item active">
+        {% else %}
+        <div class="carousel-item">
+        {% endif %}
+          <img class="d-block w-100" src={{image.image.url}} alt="First slide">
+        </div>
+        {% endfor %}
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <div class="col-md-6">
+      <div class="col-md-10">
+        <p>You have {{bug.has_image.count}} image(s)</p>
+        <h3 class="my-3">Description </h3>
+        <p>{{bug.bug_description}}</p>
+      </div>
+      <div class="col-md-2">
+          <span>
+            <a href="{% url 'bug:bug-update' pk=bug.id %}" class="btn btn-primary">Edit</a>
+            <a href="{% url 'bug:index'%}" class="btn btn-warning">Back</a>
+            <a href="{% url 'bug:bug-delete' pk=bug.id %}" class="btn btn-danger">Delete</a>
+          </span>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="col-sm-4">
+<div class="col-sm-3">
 </div>
 {% endblock content%}
