--- a/bug/templates/bug/bug_update.html
+++ b/bug/templates/bug/bug_update.html
@@ -3,7 +3,12 @@
 {% block content %}
 
 <div class="container">
-  <h2>Edit Bug</h2>
+  <div class="card">
+      <div class="card-header">
+          <h3>Edit Bug</h3>
+      </div>
+      <div class="card-body">
+
   <form method ="post">
     {% csrf_token %}
     {% load widget_tweaks %}
@@ -16,10 +21,12 @@
 
     {% endfor %}
 
-    <button type="submit" class = "btn btn-primary">Save</button>
+    <button type="submit" class = "btn btn-primary">Update</button>
   </form>
   <br>
   <a href="{% url 'bug:bug-delete' bug.id %}" class="btn btn-danger"> Delete this Bug</a>
+  </div>
+</div>
 </div>
 
 {% endblock %}
