redesign password reset layout

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,6 +22,7 @@
   {% endfor %}
   <button type="submit" class="btn btn-primary">Login</button>
 </form>
+<a href="{% url  'password_reset' %}">Forgot your Password?</a>
 </div>
 <div class="col-sm-4">
 </div>
