--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,7 @@
   <p>You are not logged in</p>
   <a href="{% url 'login' %}" class="btn btn-primary">login</a>
   <p> Don't have an account?<a href="{% url 'signup' %}"> Create an account</a><p/>
+  <a href="{% url  'password_reset' %}">Forgot Password</a>
 {% endif %}
 </section>
 
