--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,6 +4,13 @@
 {% block title %}Password reset complete{% endblock %}
 
 {% block content %}
+<div class="col-sm-4">
+</div>
+<div class="container col-sm-4">
 <h1>Password reset complete</h1>
 <p>Your new password has been set. You can log in now on the <a href="{% url 'login' %}">log in page</a>.</p>
+</div>
+<div class="col-sm-4">
+</div>
+
 {% endblock %}
