--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -4,6 +4,12 @@
 {% block title %}Email Sent{% endblock %}
 
 {% block content %}
-  <h1>Check your inbox.</h1>
-  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+<div class ="container">
+
+  <div class="text-center padding margin">
+    <h1>Check your inbox.</h1>
+    <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+  </div>
+
+</div>
 {% endblock %}
