--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -4,12 +4,26 @@
 {% block title %}Forgot Your Password?{% endblock %}
 
 {% block content %}
+<div class="container">
+
   <h1>Forgot your password?</h1>
   <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-
+    <div class="form-control">
   <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    {% if form.non_field_errors %}<div class="alert alert-danger">{{ form.non_field_errors }}</div> {% endif %}
+    {% load widget_tweaks %}
+    {% for field in form %}
+    <div class="form-group {% if field.errors %}alert alert-danger{% endif %}">
+      {{ field.errors }}
+      {{ field.label_tag }}
+      {% render_field field class="form-control" %}
+      {% if field.help_text %}<small class="text-muted">{{ field.help_text|safe}}</small> {% endif %}
+    </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-primary">Reset</button>
+
   </form>
+</div>
+</div>
 {% endblock %}
