Create Profile and Tests

--- a/bug/templates/bug/index.html
+++ b/bug/templates/bug/index.html
@@ -35,7 +35,7 @@
               <th scope="row">{{forloop.counter}}</th>
               <td>{{ bug.bug_title }}</td>
               <td>{{ bug.bug_description }}</td>
-              <td>{{ bug.bug_states }}</td>
+              <td>{{ bug.bug_status }}</td>
               <td>{{bug.reported_by}}</td>
               <td>{{bug.pub_date}}</td>
               </tr>
