--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
 				Profile
 			</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="#">My Profile</a>
+				<a class="dropdown-item" href="{% url 'profile' user.id %}">My Profile</a>
 				<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
 
 				</div>
