--- a/bugtracker/static/styles/main.css
+++ b/bugtracker/static/styles/main.css
@@ -16,7 +16,9 @@ html,body{
 }
 .btn{
   margin-bottom:1rem;
+  padding-bottom: 0rem;
 }
+
 .login-jumbo{
   padding-top: 0;
 }
@@ -33,8 +35,6 @@ html,body{
   height: 20px;
   width:20px;
 }
-
-
 
 
 
