add new models, update bug index with restrictions

--- a/bug/templates/bug/index.html
+++ b/bug/templates/bug/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load rules %}
 
 {% block title %}Index{% endblock %}
 
@@ -10,12 +10,18 @@
   <div class="row padding">
     <div class="col-md-3"></div>
     <div class="col-md-6 table-responsive">
+      <div>
+
+        <h3 style="float:left">List of Bugs</h3>
+
+        <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
+        <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
+        <p  style="float:right; margin-right:1rem">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </p>
+      </div>
       {% if latest_bug_list %}
-          <div>
-            <h3 style="float:left">List of Bugs</h3>
-            <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
-            <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
-          </div>
+
           <table class="bug-table table-striped table-hover">
           <thead class="thead-dark">
             <tr>
@@ -29,9 +35,9 @@
           </thead>
           <tbody>
             {% for bug in latest_bug_list %}
-
+            {% has_perm 'bug.read_bug' user bug as can_read_bug%}
+            {% if can_read_bug %}
               <tr class="table-row" data-href="{% url 'bug:bug-detail' pk=bug.id %}">
-
               <th scope="row">{{forloop.counter}}</th>
               <td>{{ bug.bug_title }}</td>
               <td>{{ bug.bug_description }}</td>
@@ -39,24 +45,40 @@
               <td>{{bug.reported_by}}</td>
               <td>{{bug.pub_date}}</td>
               </tr>
+            {% endif %}
             {% endfor %}
           </tbody>
         </table>
       {% else %}
-      <div>
-        <h3 style="float:left">List of Bugs</h3>
-        <a href="{% url 'bug:bug-form' %}" class="btn btn-dark" role="button" style="float:right">Report Bug</a>
-        <a href="{% url 'home' %}" class="btn btn-info" role="button" style="float:right; margin-right:1rem">Back to Home</a>
-      </div>
-      <div>
+      <div class="container">
           <p>No bugs</p>
       </div>
       {% endif %}
+      <nav style="float:right" aria-label="page navigation">
+        <ul class="pagination">
+            {% if page_obj.has_previous %}
+              <li class="page-item"><a class="page-link" href="?page=1" aria-label="First">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">First</span>
+              </a>
+            </li>
+              <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">previous</a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">next</a></li>
 
+                <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}"><span class="sr-only">Last</span> <span aria-hidden="true">&raquo;</span></a></li>
+            {% endif %}
+        </ul>
+        <p  style="float:right; margin-right:1rem">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </p>
+      </nav>
+      </div>
     </div>
+
     <div class="col-md-3"></div>
   </div>
-</div>
 <script>
   $(document).ready(function($) {
       $(".table-row").click(function() {
