--- a/bug/templates/bug/index.html
+++ b/bug/templates/bug/index.html
@@ -31,6 +31,7 @@
               <th scope="col">State</th>
               <th scope="col">Reported By</th>
               <th scope="col">Published on</th>
+              <th scope="col">Updated on</th>
             </tr>
           </thead>
           <tbody>
@@ -43,7 +44,8 @@
               <td>{{ bug.bug_description }}</td>
               <td>{{ bug.bug_status }}</td>
               <td>{{bug.reported_by}}</td>
-              <td>{{bug.pub_date}}</td>
+              <td>{{bug.get_pub_date}}</td>
+              <td>{{bug.get_update_date}}</td>
               </tr>
             {% endif %}
             {% endfor %}
